# spidercreator

./: .gitignore  README.md  exec_funcs.py  main.py  pyproject.toml  receive_bu_data.py  record_activity.py  requirements.txt  shared.py  spidercreator.py  spidercreator_gemini_experiments.py
ctxexec/: __init__.py  cand_sp_exec.py  example_usage.py  exec_sp.py  local_srv.py  pipeline.py
examples/: jobposting_spider.py  product_listings_spider.py  real_state_listings.py
pipeline/: get_url_from_sp.py  make_candsp_runnable.py  make_dom_repr.py  mindmap.py  roiclf_spcandmkr.py  sp_addr_remapping.py  sp_combination.py  spider_draft.py  verification_pipeline.py  verify_sp_execution.py  xpath_builder_planning.py
planning/: plan_tokenizer.py  planner_to_rec.py  rec_filtering.py
prompts/: listings.py
utils/: recordings.py  utils.py
