[project]
name = "spidercreator"
version = "0.1.0"
description = "Automated web scraping spider generation using Browser Use and LLMs. Streamline the creation of Playwright-based spiders with minimal manual coding. Ideal for large enterprises with recurring data extraction needs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.4,<2.11.0",
    "attrs>=25.3.0",
    "attrs-strict>=1.0.1",
    "betterhtmlchunking>=0.9.2",
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "prettyprinter>=0.18.0",
    "ptyprocess>=0.7.0",
    "pyhtml2md>=1.6.6",
    "pyobjtojson>=0.3",
    "sounddevice>=0.5.1",
    "tldextract>=5.2.0",
    "uvicorn>=0.34.1",
    "validators>=0.34.0",
    "browser-use>=0.1.41",
]

